change in getProjectsCustomers find model Session

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -48,6 +48,10 @@
     "Message": {
         "dataSource": "nodesensor",
         "public": true
+    },
+    "Session":{
+        "dataSource": "nodesensor",
+        "public": true
     }
 }
 
