repair models sessions

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -49,7 +49,7 @@
         "dataSource": "nodesensor",
         "public": true
     },
-    "Session":{
+    "Sessions":{
         "dataSource": "nodesensor",
         "public": true
     }
